collapse children of matching album / tag names.

If an album name matches the filter in one of the children of the current item, but not the current item's own name,
don't expand the current item.
This will prevent the following situation. Assume we have this album layout:

|-- 1999
|   |-- Alleyras
|   `-- Test
|       |-- 01
|       `-- 02
`-- 2008
    `-- all
        |-- 01
        `-- 02

When we search for the term all, we will get this layout with the old behavior:

|-- 1999
|   |-- Alleyras
`-- 2008
    `-- all
        |-- 01
        `-- 02

But this is wrong and can get quite messy if you have heavy nested folders. We should only display the folder names that really match the term.
We can either do this by removing all folders that don't match the criteria, but this is bad. Assume we search for "birthday" and want to see the underlying folders.
With this method they'll be gone. So the only other possible way is to collapse all non matching children like this:

|-- 1999
|   |-- Alleyras
`-- 2008
    `-- all

You still can expand the folder 'all' to get the sub-folders, but they will not mess up the folder view anymore.
Ok this was a long description for a commit... :-)

Andi

BUG:167873

svn path=/trunk/extragear/graphics/digikam/; revision=880037