digikam/albumfolderview.cpp
@@ -325,6 +325,7 @@ void AlbumFolderView::slotTextFolderFilterChanged(const QString& filter)
             continue;
 
         bool match = palbum->title().toLower().contains(search);
+        bool doesExpand = false;
         if (!match)
         {
             // check if any of the parents match the search
@@ -350,6 +351,7 @@ void AlbumFolderView::slotTextFolderFilterChanged(const QString& filter)
                 if ((*it)->title().toLower().contains(search))
                 {
                     match = true;
+                    doesExpand = true;
                     break;
                 }
                 ++it;
@@ -365,8 +367,8 @@ void AlbumFolderView::slotTextFolderFilterChanged(const QString& filter)
             if (viewItem)
             {
                 viewItem->setVisible(true);
-                viewItem->setOpen(true);
-        }
+                viewItem->setOpen(doesExpand);
+            }
         }
         else
         {
