digikam/tagfilterview.cpp
@@ -377,6 +377,7 @@ void TagFilterView::slotTextTagFilterChanged(const QString& filter)
             continue;
 
         bool match = talbum->title().toLower().contains(search);
+        bool doesExpand = false;
         if (!match)
         {
             // check if any of the parents match the search
@@ -402,6 +403,7 @@ void TagFilterView::slotTextTagFilterChanged(const QString& filter)
                 if ((*it)->title().toLower().contains(search))
                 {
                     match = true;
+                    doesExpand = true;
                     break;
                 }
                 ++it;
@@ -417,7 +419,7 @@ void TagFilterView::slotTextTagFilterChanged(const QString& filter)
             if (viewItem)
             {
                 viewItem->setVisible(true);
-                viewItem->setOpen(true);
+                viewItem->setOpen(doesExpand);
         }
         }
         else
