libs/imageproperties/imagedescedittab.cpp
@@ -1595,6 +1595,7 @@ void ImageDescEditTab::slotTagsSearchChanged(const QString& filter)
             continue;
 
         bool match = tag->title().toLower().contains(search);
+        bool doesExpand = false;
         if (!match)
         {
             // check if any of the parents match the search
@@ -1620,6 +1621,7 @@ void ImageDescEditTab::slotTagsSearchChanged(const QString& filter)
                 if ((*it)->title().toLower().contains(search))
                 {
                     match = true;
+                    doesExpand = true;
                     break;
                 }
                 ++it;
@@ -1635,7 +1637,7 @@ void ImageDescEditTab::slotTagsSearchChanged(const QString& filter)
             if (viewItem)
             {
                 viewItem->setVisible(true);
-                viewItem->setOpen(true);
+                viewItem->setOpen(doesExpand);
         }
         }
         else
